--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -1,5 +1,5 @@
 <section class="banner-section">
-    <div class="banner-bg bg_img bg-fixed" data-background="/images/banner/banner02.jpg"></div>
+    <div class="banner-bg bg_img bg-fixed" data-background="/images/banner/banner01.jpg"></div>
     <div class="container">
         <div class="banner-content">
             <h1 class="title bold">
@@ -125,7 +125,7 @@
                                                             alt="poster" />
                                                     </a>
                                                 </div>
-                                                <div class="movie-content bg-one">
+                                                <div class="movie-content">
                                                     <h5 class="title m-0">
                                                         <a href="/movie/{{this.unsignedName}}">{{this.name}}</a>
                                                     </h5>
@@ -156,7 +156,7 @@
                                                             alt="poster" />
                                                     </a>
                                                 </div>
-                                                <div class="movie-content bg-one">
+                                                <div class="movie-content">
                                                     <h5 class="title m-0">
                                                         <a href="/movie/{{this.unsignedName}}">{{this.name}}</a>
                                                     </h5>
