--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -26,6 +26,7 @@
                     <div class="form-group text-center">
                         <input type="submit" value="đăng nhập" />
                     </div>
+                    <input type="hidden" name="back" value="{{back}}">
                 </form>
                 <div class="option">
                     bạn chưa có tài khoản?
