--- a/src/views/pages/all.hbs
+++ b/src/views/pages/all.hbs
@@ -1,10 +1,24 @@
-<section class="movie-section padding-top padding-bottom">
-    <div class="container">
-        <div class="row flex-wrap-reverse justify-content-center padding-top">
-            <div class="col-lg-12 mb-50 mb-lg-0">
-                <div class="filter-tab tab">
-                    <div class="tab-area">
-                        {{#if movies.rows}}
+{{#if movies.rows}}
+    <section class="main-page-header speaker-banner bg_img" data-background="/images/banner/banner02.jpg">
+        <div class="container">
+            <div class="speaker-banner-content">
+                <h2 class="title">phim</h2>
+                <ul class="breadcrumb">
+                    <li>
+                        <a href="/">trang chủ</a>
+                    </li>
+                    <li>phim</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="movie-section padding-top padding-bottom">
+        <div class="container">
+            <div class="row flex-wrap-reverse justify-content-center">
+                <div class="col-lg-12 mb-50 mb-lg-0">
+                    <div class="filter-tab tab">
+                        <div class="tab-area">
                             <div class="section-header-1">
                                 <h2 class="title">Tất cả phim</h2>
                             </div>
@@ -19,7 +33,7 @@
                                                             alt="poster">
                                                     </a>
                                                 </div>
-                                                <div class="movie-content bg-one">
+                                                <div class="movie-content">
                                                     <h5 class="title m-0">
                                                         <a href="/movie/{{this.unsignedName}}">{{this.name}}</a>
                                                     </h5>
@@ -43,14 +57,19 @@
                                     {{/unless}}
                                 </div>
                             </div>
-                        {{else}}
-                            <div class="col-lg-12">
-                                <p style="text-align: center;">không có dữ liệu.</p>
-                            </div>
-                        {{/if}}
+
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+{{else}}
+    <section class="details-banner hero-area bg_img seat-plan-banner" data-background="/images/banner/banner04.jpg">
+        <div class="col-lg-12">
+            <p style="text-align: center;">
+                không có dữ liệu.
+            </p>
+        </div>
+    </section>
+{{/if}}
