--- a/src/views/pages/cinema.hbs
+++ b/src/views/pages/cinema.hbs
@@ -1,19 +1,19 @@
-<section class="main-page-header speaker-banner bg_img" data-background="/images/banner/banner07.jpg">
-    <div class="container">
-        <div class="speaker-banner-content">
-            <h2 class="title">hệ thống rạp phim</h2>
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/">trang chủ</a>
-                </li>
-                <li>hệ thống rạp phim</li>
-            </ul>
+{{#if validQuery}}
+    <section class="main-page-header speaker-banner bg_img" data-background="/images/banner/banner07.jpg">
+        <div class="container">
+            <div class="speaker-banner-content">
+                <h2 class="title">hệ thống rạp phim</h2>
+                <ul class="breadcrumb">
+                    <li>
+                        <a href="/">trang chủ</a>
+                    </li>
+                    <li>hệ thống rạp phim</li>
+                </ul>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="gallery-section padding-top padding-bottom bg-one">
-    {{#if validQuery}}
+    <section class="gallery-section padding-top padding-bottom">
         <div class="container">
             <div class="tab">
                 <ul class="tab-menu">
@@ -140,7 +140,7 @@
                                                 </div>
                                                 <div class="movie-schedule short">
                                                     {{#each this.ShowTimes}}
-                                                        <a href="/seat?w=2&showtime={{this.id}}">
+                                                        <a href="/booking?showtime={{this.id}}&back={{../../back}}">
                                                             <div class="item">
                                                                 {{formatDateTime this.time 'vi' 'LT Do [/] MM'}}
                                                             </div>
@@ -158,9 +158,13 @@
                     </div>
                 </div>
             </div>
-    {{else}}
+    </section>
+{{else}}
+    <section class="details-banner hero-area bg_img seat-plan-banner" data-background="/images/banner/banner04.jpg">
         <div class="col-lg-12">
-            <p style="text-align: center;">không có dữ liệu.</p>
+            <p style="text-align: center;">
+                không có dữ liệu.
+            </p>
         </div>
-    {{/if}}
-</section>
+    </section>
+{{/if}}
