--- a/src/views/pages/admin-dashboard.hbs
+++ b/src/views/pages/admin-dashboard.hbs
@@ -1,44 +1,52 @@
 <div class="breadcrumbbar">
     <div class="row align-items-center">
-        <div class="col-md-4 col-lg-4">
-            <h4 class="page-title">Tổng quan</h4>
+        <div class="col-md-12 col-lg-12">
+            <h4 class="page-title">Thống kê</h4>
         </div>
-        <div class="col-md-8 col-lg-8">
-            <div class="widgetbar mb-30" style="display: flex; justify-content: flex-end; text-align: left">
-                <div class="mr-4">
-                    <label for="">Thông kê theo:</label>
-                    <select class="custom-select" id="inputMovie" name="inputMovie">
-                        <option value="" selected>Chọn loại</option>
-                        {{#each ../selectLists.movies}}
-                            <option value="{{this.id}}">{{this.name}}</option>
-                        {{/each}}
-                    </select>
+    </div>
+    <div class="row">
+        <div class="col-md-12 col-lg-12">
+            <form id="stasticalForm">
+                <div class="widgetbar mb-30" style="display: flex; justify-content: flex-end; text-align: left">
+                    <div class="mr-2">
+                        <select class="custom-select" id="inputStasType" name="inputStasType">
+                            <option value="">Chọn loại</option>
+                            <option value="1" selected>Phim</option>
+                            <option value="2">Cụm rạp</option>
+                        </select>
+                    </div>
+                    <div class="mr-2">
+                        <select class="custom-select" id="inputStasObj" name="inputStasObj">
+                            <option value="" selected>Chọn phim</option>
+                            {{#each selectLists.movies}}
+                                <option value="{{this.id}}" {{#ifEqual this.id 1}}selected{{/ifEqual}}>{{this.name}}
+                                </option>
+                            {{/each}}
+                        </select>
+                    </div>
+                    <div class="mr-2">
+                        <input type="date" class="form-control" name="inputDateFrom" id="inputDateFrom">
+                    </div>
+                    <div class="mr-4">
+                        <input type="date" class="form-control" name="inputDateTo" id="inputDateTo">
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-primary">Thống kê</button>
+                    </div>
                 </div>
-                <div class="mr-2">
-                    <label for="">Từ ngày:</label>
-                    <input type="date" class="form-control" name="inputOpeningDay" id="inputOpeningDay">
-                </div>
-                <div>
-                    <label for="">Đến ngày:</label>
-                    <input type="date" class="form-control" name="inputOpeningDay" id="inputOpeningDay">
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
 <div class="contentbar">
     <div class="row">
-        <div class="col-lg-12">
-            <p class="m-10"><b>Cụm rạp CGV Hùng Vương</b> bán được <b>2400 vé</b> với doanh thu
-                <b>500.000.000 VND</b> từ ngày <b>01/03/2019</b> đến <b>30/04/2019</b>.
-            </p>
-        </div>
+        <div id="text" class="col-lg-12"></div>
     </div>
     <div class="row">
         <div class="col-lg-12">
             <div class="card m-b-30">
                 <div class="card-header">
-                    <h5 class="card-title">Biểu đồ doanh thu</h5>
+                    <h5 class="card-title">Biểu đồ</h5>
                 </div>
                 <div class="card-body">
                     <div id="apex-chart"></div>
