--- a/src/views/pages/notification.hbs
+++ b/src/views/pages/notification.hbs
@@ -6,7 +6,7 @@
                     <span class="cate"><a href="/">{{appName}}</a> </span>
                 </div>
                 <div class="option">
-                    {{notification}}
+                    {{{notification}}}
                 </div>
             </div>
         </div>
