--- a/src/views/partials/admin-leftbar.hbs
+++ b/src/views/partials/admin-leftbar.hbs
@@ -12,7 +12,7 @@
                         <ul class="vertical-menu">
                             <li>
                                 <a href="/admin"><img src="/admin/images/svg-icon/dashboard.svg" class="img-fluid"
-                                        alt="dashboard" />Tổng quan</a>
+                                        alt="dashboard" />Thống kê</a>
                             </li>
                             <li>
                                 <a href="javaScript:void();">
